[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.19"
serde = { version = "1.0.136", features = ["derive"] }
sea-orm = { version = "^0.9.0", features = [
    "sqlx-postgres",
    "macros",
    "runtime-actix-rustls",
    "with-chrono",
] }
