[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
entity = { path = "../entity" }

chrono = "0.4.22"
futures = "^0.3.2"
sea-orm-migration = { version = "^0.10" }
tokio = { version = "^1.19", features = ["full"] }
